# PhotoCorrectService

./: .gitignore  README.md  docker-compose.yml
api-service/: Dockerfile  pyproject.toml
api-service/src/: main.py  models.py  utils.py
